# BScSDLHomework

./: .gitignore  BScGraf_RMUGLK_OGL_Kisfeladat1.sln  CMakeLists.txt
BScGraf_RMUGLK_OGL_Kisfeladat1/: BScGraf_RMUGLK_OGL_Kisfeladat1.rc  BScGraf_RMUGLK_OGL_Kisfeladat1.vcxproj  BScGraf_RMUGLK_OGL_Kisfeladat1.vcxproj.filters  CMakeLists.txt  GLUtils.hpp  OctahedronSDLApplication.cpp  OctahedronSDLApplication.h  OctahedronScene.cpp  OctahedronScene.h  Scene.h  main.cpp  myFrag.frag
BScGraf_RMUGLK_OGL_Kisfeladat1/SDLApp/: SDLApplication.cpp  SDLApplication.h  Scene.h
BScGraf_RMUGLK_OGL_Kisfeladat1/Templates/: Singleton.h
BScGraf_RMUGLK_OGL_Kisfeladat1/Utils/: Utils.h
BScGraf_RMUGLK_OGL_Kisfeladat1/Utils/Logger/: FileLoggerComponent.h  Logger.h  LoggerComponent.h  StdErrLoggerComponent.h
Linux/BScGraf_RMUGLK_OGL_Kisfeladat1/: BScGraf_RMUGLK_OGL_Kisfeladat1_Octahedron  myVert.vert
